# anomaly_detection

./: Makefile  README.md  pyproject.toml  requirements.txt
anomaly_detection/: __init__.py
anomaly_detection/data/: make_dataset.py
anomaly_detection/models/: model.py
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: exploration.ipynb
