[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly_detection"
version = "0.0.1"
description = "This project is dedicated to assessing the feasibility of implementing a cutting-edge anomaly detection system using unsupervised learning techniques. The crucial role of anomaly detection in upholding process integrity and ensuring product quality highlights the significance of this initiative. The overarching objective is to drive the evolution of industry processes and propel the field towards Industry 4.0 by delivering a resilient and adaptable solution."
authors = [
  { name = "Kasper Schou Telkamp", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["anomaly_detection"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
